--- a/kobe.css
+++ b/kobe.css
@@ -1,5 +1,7 @@
 #title {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 48px;
+  color: #252525;
 }
 #navbar {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -14,4 +16,31 @@ a:hover {
 .bullets {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: #252525; 
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+.column {
+  flex: 25%;
+  max-width: 25%;
+  padding: 0 4px;
+}
+.column img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+}
+@media screen and (max-width: 800px) {
+  .column {
+    flex: 50%;
+    max-width: 50%;
+  }
+}
+@media screen and (max-width: 600px) {
+  .column {
+    flex: 100%;
+    max-width: 100%;
+  }
 }
