--- a/kobe.css
+++ b/kobe.css
@@ -1,21 +1,57 @@
+body {
+  background-color: #252525;
+}
 #title {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 48px;
-  color: #252525;
+  font-size: 72px;
+  color: #dadada;
+  text-align: center;
 }
 #navbar {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+}
+#mirrorimage {
+  transform: scaleX(-1);
+}
+#cardheader {
+  font-weight: bold;
+}
+.card {
+  background-color: #353535;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+  transition: 0.3s;
+  position: absolute;
+  right: 0;
+  margin-right: 10px;
+  z-index: 1;
+}
+.card:hover {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,1.0);
+}
+#cardphoto {
+  width: 50%;
+  height: 50%;
+}
+#cardheader {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: #dadada;
+  font-size: 18px;
+}
+.container {
+  padding: 2px 16px;
 }
 a {
   color: purple;
-  font-size: 16px;
+  font-size: 18px;
+  padding: 4px;
 }
 a:hover {
   color: gold;
 }
 .bullets {
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  color: #252525; 
+  color: #dadada; 
 }
 .row {
   display: flex;
